# 257215_projekt_maticova_kalkulacka

./: CMakeLists.txt
257215_projekt_maticova_kalkulacka/: CMakeLists.txt  maticova_kalkulacka.cpp  maticova_kalkulacka.h  operace.cpp  operace.h
